* Separated the two stretch goal wordings into two files and subsequently extracted stretch goal logic into own handler * Used different maxAge and checkInterval settings for different file types * Fixed "" strings to '' strings * Added countdown support

--- a/views/countdown.hbs
+++ b/views/countdown.hbs
@@ -59,15 +59,15 @@ a {
 
 <div id="stretch">
     <div class="timer days">
-        <span class="count">02</span>
+        <span class="count">{{day}}</span>
         <span class="label">Days</span>
     </div>
     <div class="timer hours">
-        <span class="count">12</span>
+        <span class="count">{{hour}}</span>
         <span class="label">Hours</span>
     </div>
     <div class="timer minutes">
-        <span class="count">39</span>
+        <span class="count">{{minute}}</span>
         <span class="label">Minutes</span>
     </div>
     <p class="description">Your last chance to grab our Ghost rewards! Once the timer hits zero, it's all over.</p>
