--- a/views/strechGoal1b.hbs
+++ b/views/strechGoal1b.hbs
@@ -76,7 +76,7 @@ a {
 </style>
 
 <div id="stretch">
-    <h1>Fully funded, but far from finished.</h1>
+    <h1>We need your help to reach our stretch goal!</h1>
     <p>We've hit our first target - thank you so much! Now we're going for the stretch.<br />
         <a href="#">Click here</a> to read about what will happen if we hit this target!</p>
     <div class="progress">
