Generic wording (not for ghost branch)

--- a/views/countdown.hbs
+++ b/views/countdown.hbs
@@ -70,5 +70,5 @@ a {
         <span class="count">{{minute}}</span>
         <span class="label">Minutes</span>
     </div>
-    <p class="description">Your last chance to grab our Ghost rewards! Once the timer hits zero, it's all over.</p>
+    <p class="description">Your last chance to grab our rewards! Once the timer hits zero, it's all over.</p>
 </div>
